--- a/.github/workflows/build_latex_and_upload_pdf_file.yml
+++ b/.github/workflows/build_latex_and_upload_pdf_file.yml
@@ -15,3 +15,6 @@ jobs:
         with:
           name: PDF
           path: example.pdf 
+      - uses: actions/upload-artifact@v4
+        with:
+          path: example.pdf 
