--- a/.github/workflows/build_latex_and_upload_pdf_file.yml
+++ b/.github/workflows/build_latex_and_upload_pdf_file.yml
@@ -1,5 +1,8 @@
 name: Build LaTeX document
 on: [push]
+# Make sure the GITHUB_TOKEN has permission to upload to our releases
+permissions:
+  contents: write
 jobs:
   build_latex:
     runs-on: ubuntu-latest
@@ -11,10 +14,14 @@ jobs:
         with:
           root_file: example.tex
       - name: Upload PDF file
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: PDF
           path: example.pdf 
-      - uses: actions/upload-artifact@v4
-        with:
-          path: example.pdf 
+      - name: '📦 upload as latest release'
+        run: |
+          cd ${{github.workspace}}
+          gh release upload latest example.pdf
+        env:
+          GITHUB_TOKEN: ${{ github.TOKEN }}
+        shell: bash  
