improve 'latest' release management

--- a/.github/workflows/build_latex_and_upload_pdf_file.yml
+++ b/.github/workflows/build_latex_and_upload_pdf_file.yml
@@ -21,7 +21,8 @@ jobs:
       - name: '📦 upload as latest release'
         run: |
           cd ${{github.workspace}}
-          gh release delete-asset latest example.pdf
+          gh release delete latest -y || true
+          gh release create latest
           gh release upload latest example.pdf
         env:
           GITHUB_TOKEN: ${{ github.TOKEN }}
